PROTON-625 In edge-case where map->load_factor exactly equals load, it was possible for pni_map_ensure() and pni_map_entry() to get into a semi-infinite loop.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1612569 13f79535-47bb-0310-9956-ffa450edef68